# argolid

./: .gitignore  CMakeLists.txt  README.md  Untitled.ipynb  pyproject.toml  pytest.ini  setup.py
.github/workflows/: publish_pypi.yml  wheel_build.yml
ci-utils/: before_all_linux.sh  before_all_macos.sh  before_all_win.bat  install_prereq_linux.sh  install_sys_deps_linux.sh  prebuild_linux.sh
ci-utils/tensorstore_prebuild/: CMakeLists.txt  ts_prebuild_marker.cc
src/cpp/core/: chunked_base_to_pyr_gen.cpp  chunked_pyramid_assembler.cpp  ome_tiff_to_chunked_converter.cpp  ome_tiff_to_chunked_pyramid.cpp  pyramid_compositor.cpp  pyramid_compositor.h  pyramid_compositor_from_trash.cpp  pyramid_compositor_old.cpp  pyramid_view.cpp
src/cpp/interface/: pyramid_python_interface.cpp
src/cpp/ts_driver/tiled_tiff/: tiled_tiff_key_value_store.cc
src/cpp/utilities/: utilities.cpp  utilities.h
src/python/argolid/: __init__.py  pyramid_compositor.py  pyramid_generator.py
tests/python/: io_utils.py  multi_images.py  single_image.py  test_multi_images.py  test_pytest_bridge.py  test_read.py  test_single_image.py  test_volume_generator.py  zarr_assertions.py
